Fixed dialog flex stretch shrink/grow

--- a/frontend/src/styles/components/dialog.css
+++ b/frontend/src/styles/components/dialog.css
@@ -29,6 +29,6 @@
     }
 
     .dialog__popup__child {
-        @apply px-horizontal-sm py-vertical-sm;
+        @apply px-horizontal-sm py-vertical-sm min-h-0 shrink-0;
     }
 }
